2004-08-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/new-slur.cc (add_column): remove set_interface()

2004-08-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/slur-double.ly: new file. 

	* lily/slur-engraver.cc: add doubleSlurs property

	* scm/fret-diagrams.scm (label-fret): use cond instead of case for
	symbols.

	* Documentation/user/notation.itely (Easy Notation note heads):
	revise notation Chapter.

	* ly/music-functions-init.ly (makecluster): add makeClusters music function.

	* lily/part-combine-engraver.cc: rename soloADue ->
	printPartCombineTexts

	* scripts/convert-ly.py (conv): junk script{Up|Down|Both}.

	* lily/horizontal-bracket.cc (print): use
	Tuplet_bracket::make_bracket, so it supports bracket-flare,
	edge-eight and shorten-pair.

2004-08-22  Pedro Kroger  <kroeger@pedrokroeger.net>

	* Documentation/user/changing-defaults.itely (Page layout):
	description of firstpagenumber. Moved @refbugs about rightmargin
	to the end of the section (it was looking like the documentation
	after the refbugs was part of the bug comment).

	* scm/framework-ps.scm (output-framework): set the first
	postscript page number to firstpagenumber

	* scm/page-layout.scm (ly:optimal-page-breaks): print the first
	page number according to firstpagenumber

	* scm/paper.scm (set-paper-dimensions): added firstpagenumber
	parameter

2004-08-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/slur-engraver.cc (class Slur_engraver): simplify: remove
	nested slurs. 

	* scripts/convert-ly.py (lilypond_version_re_str): handle
	\version "bar" % "foo"

	* lily/completion-note-heads-engraver.cc (process_music): set
	duration-log before announcing object.
	
	* lily/staff-symbol.cc (print): subtract thickness from staff line
	length

	* lily/parser.yy (book_body): disallow { ..music.. } inside \book
	
2004-08-21  Carl Sorensen  <carldsorensen@comcast.net>

	* scm/stencil.scm: remove fontify-text and fontify-text-white
