@@ -1,3 +1,8 @@
+2004-08-23  Pedro Kroger  <kroeger@pedrokroeger.net>
+
+	* scm/page-layout.scm (plain-header): fix bug that print page
+	number in the first page if firstpagenumber was different than 1.
+
 2004-08-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/new-slur.cc (add_column): remove set_interface()
